<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".up"
    android:orientation="vertical"
    android:background="#D3A669">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#D3A669">
    <TextView
        android:id="@+id/details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_details"
        android:textColor="#0C0B0B"
        android:textSize="36sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/book_name"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:background="#F5F1F1"
        android:inputType="text"
        android:hint="@string/book_name"
        android:text="@string/book_name"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        android:ems="10"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/subject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/subject"
        android:background="#F5F1F1"
        android:ems="10"
        android:inputType="text"
        android:text="@string/subject"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/condition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/condition"
        android:background="#F5F1F1"
        android:ems="10"
        android:inputType="text"
        android:text="@string/condition"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/original_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/original_price"
        android:layout_marginTop="20dp"
        android:background="#F5F1F1"
        android:ems="10"
        android:inputType="text"
        android:text="@string/original_price"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/selling_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/selling_price"
        android:background="#F5F1F1"
        android:inputType="text"
        android:ems="10"
        android:text="@string/selling_price"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        tools:ignore="Autofill" />



    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:hint="@string/description"
        android:background="#F5F1F1"
        android:ems="10"
        android:inputType="text"
        android:text="@string/description"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        tools:ignore="Autofill" />

    <TextView
        android:id="@+id/seller"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/seller_information"
        android:text="@string/seller_information"
        android:textColor="#0C0B0B"
        android:ems="10"
        android:textSize="36sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/full_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#F5F1F1"
        android:inputType="text"
        android:ems="10"
        android:hint="@string/full_name"
        android:text="@string/full_name"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/Cell"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/mob_no"
        android:background="#F5F1F1"
        android:inputType="phone"
        android:ems="10"
        android:text="@string/mob_no"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/Email_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#F5F1F1"
        android:inputType="textEmailAddress"
        android:hint="@string/email_address"
        android:text="@string/email_address"
        android:textSize="24sp"
        android:ems="10"
        android:textStyle="bold|italic"
        tools:ignore="Autofill" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/upload_book_image"
            android:text="@string/upload_book_image"
            android:textColor="#0C0B0B"
            android:ems="10"
            android:textSize="36sp"
            android:textStyle="bold"/>


        <LinearLayout
            android:layout_width="396dp"
            android:layout_height="wrap_content"
            android:background="#D3A669"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/Pic"
                android:layout_width="200dp"
                android:layout_height="125dp"
                android:layout_marginTop="20dp"
                android:background="#F5F1F1" />

            <Button
                android:id="@+id/choose_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="60dp"
                android:text="@string/choose_file"
                android:textStyle="bold" />



        </LinearLayout>

        <Button
            android:id="@+id/upload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/upload"
            android:layout_marginLeft="80dp"
            android:textStyle="bold" />
        <Button
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/submit"
            android:textStyle="bold" />




    </LinearLayout>

</ScrollView>
</LinearLayout>