<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@drawable/bb"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="220dp"
        app:srcCompat="@drawable/login" />


    <EditText
        android:id="@+id/userName"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#E7DCDC"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/user_name" />

    <EditText
        android:id="@+id/password"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#E7DCDC"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        tools:text="@string/password" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#E7DCDC"
        android:text="@string/login" />

    <LinearLayout
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:text="@string/new_user"
            android:textColor="#F0DFDF"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/Signup"
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:text="@string/click_to_signup"
            android:textColor="#F0DFDF"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>