<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:weightSum="100"
    android:layout_margin="10dp">

    <LinearLayout
        android:layout_width="276dp"
        android:layout_height="match_parent"
        android:layout_weight="70"
        android:background="#D3A669"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/book_name"
            android:textSize="15dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/book"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_address"
            android:textSize="15dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/checkdetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_details" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="30">

        <ImageView
            android:id="@+id/profilePic"
            android:layout_width="231dp"
            android:layout_height="150dp"
            android:scaleType="fitXY" />
    </LinearLayout>
</LinearLayout>